# AIGF

./: .gitignore  bot.py  config.py  conversation.py  main.py  prompt.json  prompt.txt  pyproject.toml  requirements.txt  run.bat  settings.ini  text.py
cache/: 1234567890.json  1234567890.yaml
config/: config.py  config_cache.py
data/: codegen.bat  conversation.py  conversation.yaml  conversation_parser.py  data_generator.py  history.py  prompt.py  prompt.txt  prompt.yaml  prompt_parser.py  test.py
scripts/: bot.py  cache_manager.py  config.py  conversation.py  history_manager.py  ko_kr.py
settings/: config.py  config_cache.py  session_cache.py
utils/: file_io.py  iteration.py  parser.py  validator.py
