[tool.poetry]
name = "aigf"
version = "0.1.0"
description = ""
authors = ["Rekorn <urun4m0r1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
discord-py = "^2.2.2"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
